--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@ngx-pwa/local-storage": "^8.0.2",
     "@ngxs/devtools-plugin": "^3.5.0",
     "@ngxs/logger-plugin": "^3.5.0",
     "@ngxs/storage-plugin": "^3.5.0",
